Avancement de la page HTML, ajout du fichier style.css, ajout de la police d'écriture 'Sen' et modification de certains fichiers images

--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
         <title>Portfolio Lucas Madranges</title>
     </head>
     <body>
+        <!-- AJOUTER BOUTON DE NAVIGATION -->
         <header>
-            <H1>Lucas Madranges</H1>
-            <img src="" alt="IMAGE LIGNE A TROUVE">
+            <img src="images/Image_fond.png" alt="Image de fond de montagne enneigé à Bonneval-sur-Arc">
+            <h1>Lucas Madranges</h1>
             <h2>Développeur Web</h2>
-            <img src="" alt="IMAGE DE MOI">
         </header>
         <div>
-            <H3>Qui suis-je ?</H3>
+            <div class="Line"></div>
+            <h2>Qui suis-je ?</h2>
+            <div class="Line"></div>
             <p>Un Etudiant
                 <br>
                 Un Développeur Web Junior
@@ -22,6 +25,122 @@
                 Un Streamer Twitch
             </p>
             <p><i>"L'échec est le fondement de la réussite."</i> Abraham Lincoln</p>
+        </div>
+        <br>
+        <div class="grey">
+            <div class="Line"></div>
+            <h2>Biographie</h2>
+            <div class="Line"></div>
+            <br>
+            <p>
+                Je m’appelle Lucas Madranges, alias “BabyLucky” sur les réseaux, je suis français, né à Charenton-le-Pont en Ile-de-France et j’habite actuellement à Marcelcave, dans la Somme.
+                <br>
+                Je suis un grand passionné de l’informatique et motivé d’apprendre beaucoup de chose, par moi-même ou grâce aux autres. Je suis également très organisé et ponctuel dans mon travail. 
+                <br>
+                Je suis actuellement Développeur Informatique depuis 2021, avec une bonne expérience en langage C++ sur l’IDE Qt Creator. 
+                <br>
+                Mais, la formation ne me convient pas, je pars donc l’an prochain, en 2023, au sein de l’école MyDigitalSchool à Lille dans le Bachelor Développeur Web pour effectuer une 3éme année dans le développement web pour approfondir mes connaissances.
+                <br>
+                Puis, en 2024, à la suite de mon Bachelor, je souhaite continuer vers le MBA Développeur Full-Stack de la même école pour, plus tard, créer ma propre start-up.
+                <br>
+                J’apprends aussi, par le biais de vidéos en ligne et de site de formation comme OpenClassroom ou Udemy, des framework et bibliothèque pour Javascript et CSS comme Bootstrap ou Vue.JS.
+                <br>
+                En dehors du web, j’apprendrais à créer d’autres projets comme des jeux vidéo sur Unity, du Modèle 3D avec Blender, des Mods Minecraft avec Java ou encore un Bot Discord avec Discord.js.
+                <br>
+                Je vais aussi, par la suite, faire du stream en ligne sur des projets web, Unity, mobile... ainsi que des vidéos de cours en ligne pour apprendre certains langages ou des tutoriels. 
+                <br>
+                D’ici juillet 2023, je vais simplement commencer le streaming en ligne sur des projets web ou de jeux vidéo, mais il m’arrivera parfois aussi de faire d’autres contenus comme simplement jouer à des jeux vidéo.
+            </p>
+        </div>
+        <br>
+        <div>
+            <div id="Chronological_line"></div>
+            <div class="Chronological_ellipse"></div>
+            <div class="Chronological_ellipse"></div>
+            <div class="Chronological_ellipse"></div>
+            <div class="Chronological_ellipse"></div>
+            <div class="Chronological_ellipse"></div>
+            <div class="Chronological_ellipse"></div>
+            <div class="Chronological_ellipse"></div>
+            <div class="Chronological_ellipse"></div>
+            <div class="Chronological_ellipse"></div>
+            <div class="Chronological_ellipse"></div>
+            <div class="Chronological_ellipse"></div>
+            <div class="Chronological_ellipse"></div>
+            <div class="Chronological_ellipse"></div>
+            <div class="Chronological_ellipse"></div>
+            <div class="Chronological_ellipse"></div>
+            <div class="Line"></div>
+            <H2>Mes Formations</H2>
+            <div class="Line"></div>
+            <br>
+            <img src="images/logo_mda.png" alt="Logo de l'école MyDigitalSchool">
+            <h3>MyDigitalSchool</h3>
+            <h4>Etudiant</h4>
+            <h5>France, Lille (59)</h5>
+            <br>
+            <p>Formation pour l'obtention du Bachelor Développeur Web (Bac +3) à partir de Septembre 2023.</p>
+            <br>
+            <img src="images/logo_edouard_branly.png" alt="Logo du Lycée Edouard Branly">
+            <h3>Lycée Edouard Branly</h3>
+            <h4>Etudiant</h4>
+            <h5>France, Amiens</h5>
+            <br>
+            <p>Formation pour l'obtention du BTS Sstèmes Numériques option Informatique et Réseaux (Bac +2) de Septembre 2021 à Juin 2023 (actuellement).</p>
+            <br>
+            <img src="images/Logo_UFCV.jpg" alt="Logo de l'Association UFCV">
+            <h3>Association UFCV</h3>
+            <h4>Apprenti</h4>
+            <h5>France, Amiens</h5>
+            <br>
+            <p>Formation pour l'obtention du BAFA en 3 étapes de juillet 2020 à juin 2021.</p>
+            <br>
+            <img src="images/logo_edouard_branly.png" alt="Logo du Lycée Edouard Branly">
+            <h3>Lycée Edouard Branly</h3>
+            <h4>Etudiant</h4>
+            <h5>France, Amiens</h5>
+            <br>
+            <p>Formation pour l’obtention du BAC Technologique STI2D option Systèmes d’Information et Numérique de Septembre 2018 à Juin 2021.</p>
+            <br>
+            <img src="images/logo_villers_bretonneux.jpg" alt="Logo de Villers-Bretonneux">
+            <h3>Collège Jacques-Brel</h3>
+            <h4>Elèves</h4>
+            <h5>France, Villers-Bretonneux</h5>
+            <br>
+            <p>Formation pour l’obtention du Brevet national du collèges de Septembre 2017 à Juin 2018.</p>
+            <br>
+            <div class="Line"></div>
+            <h2>Mes Diplômes</h2>
+            <div class="Line"></div>
+            <br>
+            <img src="images/logo_edouard_branly.png" alt="Logo du Lycée Edouard Branly">
+            <h3>Lycée Edouard Branly</h3>
+            <h4>Etudiant</h4>
+            <h5>France, Amiens (80)</h5>
+            <br>
+            <p>Diplôme du BTS Systèmes Numériques option Informatique et Réseaux (pas encore obtenu).</p>
+            <br>
+            <img src="images/Logo_UFCV.jpg" alt="Logo de l'Association UFCV">
+            <h3>Association UFCV</h3>
+            <h4>Apprenti</h4>
+            <h5>France, Amiens (80)</h5>
+            <br>
+            <p>Diplôme du BAFA obtenu en Juillet 2021.</p>
+            <br>
+            <img src="images/logo_edouard_branly.png" alt="Logo du Lycée Edouard Branly">
+            <h3>Lycée Edouard Branly</h3>
+            <h4>Etudiant</h4>
+            <h5>France, Amiens (80)</h5>
+            <br>
+            <p>Diplôme du BAC Technologique STI2D option Systèmes d’Information et Numérique (Mention Assez Bien) obtenu en Juin 2021.</p>
+            <br>
+            <img src="images/logo_villers_bretonneux.jpg" alt="Logo de Villers-Bretonneux">
+            <h3>Collège Villers-Bretonneux</h3>
+            <h4>Elèves</h4>
+            <h5>France, Villers-Bretonneux (80)</h5>
+            <br>
+            <p>Diplôme national du brevet des collèges (Mention Très Bien) obtenu en Juin 2018.</p>
+            <br>
         </div>
     </body>
 </html>
