Avancement de index.html et ajout d'images dans le dossier images

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <div class="Chronological_ellipse"></div>
             <div class="Chronological_ellipse"></div>
             <div class="Chronological_ellipse"></div>
+            <br>
             <div class="Line"></div>
             <H2>Mes Formations</H2>
             <div class="Line"></div>
@@ -140,6 +141,133 @@
             <h5>France, Villers-Bretonneux (80)</h5>
             <br>
             <p>Diplôme national du brevet des collèges (Mention Très Bien) obtenu en Juin 2018.</p>
+            <br>
+            <div class="Line"></div>
+            <h2>Mon Parcours</h2>
+            <div class="Line"></div>
+            <br>
+            <img src="images/interrogation_img" alt="Image point d'interrogation">
+            <h3>Recherche d'alternance</h3>
+            <h4>Développeur Web</h4>
+            <h5>France, Lille (59)</h5>
+            <br>
+            <p>Actuellement en recherche d’une alternance pour ma 3éme année de Bachelor.</p>
+            <br>
+            <img src="images/logoCRIStAL.svg" alt="Logo du laboratoire CRIStAL">
+            <h3>CRIStAL</h3>
+            <h4>Développeur Web</h4>
+            <h5>France, Villeneuve d'Ascq (59)</h5>
+            <br>
+            <p>Stage en entreprise de 6 semaines du 16 Mai au 24 Juin 2022.</p>
+            <br>
+            <img src="images/logo_familles_rurales.jpg" alt="Logo de l'association Familles Rurales">
+            <h3>Association Familles Rurales</h3>
+            <h4>Animateur</h4>
+            <h5>France, Marcelcave (80)</h5>
+            <br>
+            <p>Animateur en centre de loisirs du 12 Juillet au 6 Août 2021.</p>
+            <br>
+            <img src="images/logo_diabolo.png" alt="Logo de l'association Diabolo">
+            <h3>Association Diabolo</h3>
+            <h4>Animateur</h4>
+            <h5>France, Gironde (33)</h5>
+            <br>
+            <p>Stage pratique en colonie de vacances pour l’obtention du BAFA du 03 Août au 21 Août 2020.</p>
+            <br>
+            <img src="images/logo_sncf.jpg" alt="Logo de la SNCF">
+            <h3>SNCF</h3>
+            <h4>Stagiaire</h4>
+            <h5>France, Amiens (80)</h5>
+            <br>
+            <p>Stage d’observation en entreprise au service informatique du 27 Novembre au 3 Décembre 2017.</p>
+            <br>
+            <div class="Line"></div>
+            <h2>Mes Certifications</h2>
+            <div class="Line"></div>
+            <br>
+            <img src="images/certification_pix.png" alt="Image de la certification pix">
+            <h3>Certification Pix</h3>
+            <h4>Etudiant</h4>
+            <h5>France, Amiens (80)</h5>
+            <br>
+            <p>Certification Pix obtenu le 23 Mars 2023 avec le Lycée Edouard Branly avec un 394 points.</p>
+            <br>
+        </div>
+        <div>
+            <br>
+            <div class="Line"></div>
+            <h2>Mes Compétences</h2>
+            <div class="Line"></div>
+            <br>
+            <h3>Développement</h3>
+            <div>
+                <p><img src="images/logo_html.png" alt="Logo du langage informatique HTML5"> HTML <progress value="3" max="5"></progress></p>
+            </div>
+            <div>
+                <p><img src="images/logo_css.png" alt="Logo du langage informatique CSS3"> CSS <progress value="2" max="5"></progress></p>
+            </div>
+            <div>
+                <p><img src="images/logo_js.png" alt="Logo du langage de programmation JavaScript"> JS <progress value="1" max="5"></progress></p>
+            </div>
+            <div>
+                <p><img src="images/logo_php.png" alt="Logo du langage de programmation PHP"> PHP <progress value="2" max="5"></progress></p>
+            </div>
+            <div>
+                <p><img src="images/logo_git.png" alt="Logo de Git"> Git <progress value="2" max="5"></progress></p>
+            </div>
+            <div>
+                <p><img src="images/logo_c++.png" alt="Logo du langage de programmation C++"> C++ <progress value="3" max="5"></progress></p>
+            </div>
+            <h3>Design</h3>
+            <div>
+                <p><img src="images/figma_logo.png" alt="Logo de Figma"> Figma <progress value="3" max="5"></progress></p>
+            </div>
+            <div>
+                <p><img src="images/logo_adobe.png" alt="Logo de Adobe"> Adobe <progress value="1" max="5"></progress></p>
+            </div>
+            <h3>Outils</h3>
+            <div>
+                <p><img src="images/visual-studio-code-1.svg" alt="Logo de Visual Sutdio Code"> VS Code <progress value="4" max="5"></progress></p>
+            </div>
+            <div>
+                <p><img src="images/logo_github.png" alt="Logo de GitHub"> GitHub <progress value="3" max="5"></progress></p>
+            </div>
+            <div>
+                <p><img src="images/logo_docker.png" alt="Logo de Docker"> Docker <progress value="2" max="5"></progress></p>
+            </div>
+            <h3>Quelques autres langages que j'apprendrais :</h3>
+            <ul>
+                <li>BootStrap</li>
+                <li>Vue.JS</li>
+                <li>React</li>
+                <li>Angular</li>
+                <li>Node.JS</li>
+                <li>C#</li>
+                <li>...</li>
+            </ul>
+            <br>
+        </div>
+        <div>
+            <div class="Line"></div>
+            <h2>Portfolio</h2>
+            <div class="Line"></div>
+            <br>
+            <p>Lors de mes études et de mon apprentissage, j’ai effectué différents projets web, petit ou grand, pour en apprendre plus sur le développement et l’informatique pour ainsi, améliorer mes compétences.</p>
+            <br>
+            <p>Vous en trouverez une liste juste en dessous, trié par catégorie de développement et de thèmes. Bon visionnage.</p>
+            <br>
+        </div>
+        <div>
+            <br>
+            <div class="Line"></div>
+            <h2>Développement Web</h2>
+            <div class="Line"></div>
+            <br>
+            <p>Ici, voici une liste non-exhaustive de mes projets web. Vous en trouverez d’autres sur mon profil GitHub.</p>
+            <br>
+            <button class="Fleches_defilement"><img src="images/fleche_gauche.png" alt=""></button>
+            <button class="Fleches_defilement"><img src="images/fleche_droite.png" alt=""></button>
+            <!-- AJOUTER LES IMAGES ET LIENS DES SITES A METTRE DANS LE PORTFOLIO -->
             <br>
         </div>
     </body>
