Modification du index.html et du style.css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2>Développeur Web</h2>
         </header>
         <aside>
-            <div>
+            <div id="who_i_am">
                 <div class="Line"></div>
                 <h2>Qui suis-je ?</h2>
                 <div class="Line"></div>
@@ -60,35 +60,35 @@
                 <H2>Mes Formations</H2>
                 <div class="Line"></div>
                 <br>
-                <img src="images/logo_mda.png" alt="Logo de l'école MyDigitalSchool">
+                <img class="formation_img" src="images/logo_mda.png" alt="Logo de l'école MyDigitalSchool">
                 <h3>MyDigitalSchool</h3>
                 <h4>Etudiant</h4>
                 <h5>France, Lille (59)</h5>
                 <br>
                 <p>Formation pour l'obtention du Bachelor Développeur Web (Bac +3) à partir de Septembre 2023.</p>
                 <br>
-                <img src="images/logo_edouard_branly.png" alt="Logo du Lycée Edouard Branly">
+                <img class="formation_img" src="images/logo_edouard_branly.png" alt="Logo du Lycée Edouard Branly">
                 <h3>Lycée Edouard Branly</h3>
                 <h4>Etudiant</h4>
                 <h5>France, Amiens</h5>
                 <br>
                 <p>Formation pour l'obtention du BTS Sstèmes Numériques option Informatique et Réseaux (Bac +2) de Septembre 2021 à Juin 2023 (actuellement).</p>
                 <br>
-                <img src="images/Logo_UFCV.jpg" alt="Logo de l'Association UFCV">
+                <img class="formation_img" src="images/Logo_UFCV.jpg" alt="Logo de l'Association UFCV">
                 <h3>Association UFCV</h3>
                 <h4>Apprenti</h4>
                 <h5>France, Amiens</h5>
                 <br>
                 <p>Formation pour l'obtention du BAFA en 3 étapes de juillet 2020 à juin 2021.</p>
                 <br>
-                <img src="images/logo_edouard_branly.png" alt="Logo du Lycée Edouard Branly">
+                <img class="formation_img" src="images/logo_edouard_branly.png" alt="Logo du Lycée Edouard Branly">
                 <h3>Lycée Edouard Branly</h3>
                 <h4>Etudiant</h4>
                 <h5>France, Amiens</h5>
                 <br>
                 <p>Formation pour l’obtention du BAC Technologique STI2D option Systèmes d’Information et Numérique de Septembre 2018 à Juin 2021.</p>
                 <br>
-                <img src="images/logo_villers_bretonneux.jpg" alt="Logo de Villers-Bretonneux">
+                <img class="formation_img" src="images/logo_villers_bretonneux.jpg" alt="Logo de Villers-Bretonneux">
                 <h3>Collège Jacques-Brel</h3>
                 <h4>Elèves</h4>
                 <h5>France, Villers-Bretonneux</h5>
@@ -99,28 +99,28 @@
                 <h2>Mes Diplômes</h2>
                 <div class="Line"></div>
                 <br>
-                <img src="images/logo_edouard_branly.png" alt="Logo du Lycée Edouard Branly">
+                <img class="formation_img" src="images/logo_edouard_branly.png" alt="Logo du Lycée Edouard Branly">
                 <h3>Lycée Edouard Branly</h3>
                 <h4>Etudiant</h4>
                 <h5>France, Amiens (80)</h5>
                 <br>
                 <p>Diplôme du BTS Systèmes Numériques option Informatique et Réseaux (pas encore obtenu).</p>
                 <br>
-                <img src="images/Logo_UFCV.jpg" alt="Logo de l'Association UFCV">
+                <img class="formation_img" src="images/Logo_UFCV.jpg" alt="Logo de l'Association UFCV">
                 <h3>Association UFCV</h3>
                 <h4>Apprenti</h4>
                 <h5>France, Amiens (80)</h5>
                 <br>
                 <p>Diplôme du BAFA obtenu en Juillet 2021.</p>
                 <br>
-                <img src="images/logo_edouard_branly.png" alt="Logo du Lycée Edouard Branly">
+                <img class="formation_img" src="images/logo_edouard_branly.png" alt="Logo du Lycée Edouard Branly">
                 <h3>Lycée Edouard Branly</h3>
                 <h4>Etudiant</h4>
                 <h5>France, Amiens (80)</h5>
                 <br>
                 <p>Diplôme du BAC Technologique STI2D option Systèmes d’Information et Numérique (Mention Assez Bien) obtenu en Juin 2021.</p>
                 <br>
-                <img src="images/logo_villers_bretonneux.jpg" alt="Logo de Villers-Bretonneux">
+                <img class="formation_img" src="images/logo_villers_bretonneux.jpg" alt="Logo de Villers-Bretonneux">
                 <h3>Collège Villers-Bretonneux</h3>
                 <h4>Elèves</h4>
                 <h5>France, Villers-Bretonneux (80)</h5>
@@ -131,35 +131,35 @@
                 <h2>Mon Parcours</h2>
                 <div class="Line"></div>
                 <br>
-                <img src="images/interrogation_img" alt="Image point d'interrogation">
+                <img class="formation_img" src="images/interrogation_img" alt="Image point d'interrogation">
                 <h3>Recherche d'alternance</h3>
                 <h4>Développeur Web</h4>
                 <h5>France, Lille (59)</h5>
                 <br>
                 <p>Actuellement en recherche d’une alternance pour ma 3éme année de Bachelor.</p>
                 <br>
-                <img src="images/logoCRIStAL.svg" alt="Logo du laboratoire CRIStAL">
+                <img class="formation_img" src="images/logoCRIStAL.svg" alt="Logo du laboratoire CRIStAL">
                 <h3>CRIStAL</h3>
                 <h4>Développeur Web</h4>
                 <h5>France, Villeneuve d'Ascq (59)</h5>
                 <br>
                 <p>Stage en entreprise de 6 semaines du 16 Mai au 24 Juin 2022.</p>
                 <br>
-                <img src="images/logo_familles_rurales.jpg" alt="Logo de l'association Familles Rurales">
+                <img class="formation_img" src="images/logo_familles_rurales.jpg" alt="Logo de l'association Familles Rurales">
                 <h3>Association Familles Rurales</h3>
                 <h4>Animateur</h4>
                 <h5>France, Marcelcave (80)</h5>
                 <br>
                 <p>Animateur en centre de loisirs du 12 Juillet au 6 Août 2021.</p>
                 <br>
-                <img src="images/logo_diabolo.png" alt="Logo de l'association Diabolo">
+                <img class="formation_img" src="images/logo_diabolo.png" alt="Logo de l'association Diabolo">
                 <h3>Association Diabolo</h3>
                 <h4>Animateur</h4>
                 <h5>France, Gironde (33)</h5>
                 <br>
                 <p>Stage pratique en colonie de vacances pour l’obtention du BAFA du 03 Août au 21 Août 2020.</p>
                 <br>
-                <img src="images/logo_sncf.jpg" alt="Logo de la SNCF">
+                <img class="formation_img" src="images/logo_sncf.jpg" alt="Logo de la SNCF">
                 <h3>SNCF</h3>
                 <h4>Stagiaire</h4>
                 <h5>France, Amiens (80)</h5>
@@ -170,7 +170,7 @@
                 <h2>Mes Certifications</h2>
                 <div class="Line"></div>
                 <br>
-                <img src="images/certification_pix.png" alt="Image de la certification pix">
+                <img class="formation_img" src="images/pix.png" alt="Image de la certification pix">
                 <h3>Certification Pix</h3>
                 <h4>Etudiant</h4>
                 <h5>France, Amiens (80)</h5>
@@ -178,7 +178,7 @@
                 <p>Certification Pix obtenu le 23 Mars 2023 avec le Lycée Edouard Branly avec un 394 points.</p>
                 <br>
             </div>
-            <div>
+            <div class="grey">
                 <br>
                 <div class="Line"></div>
                 <h2>Mes Compétences</h2>
@@ -242,7 +242,7 @@
                 <p>Vous en trouverez une liste juste en dessous, trié par catégorie de développement et de thèmes. Bon visionnage.</p>
                 <br>
             </div>
-            <div>
+            <div class="grey">
                 <br>
                 <div class="Line"></div>
                 <h2>Développement Web</h2>
@@ -283,7 +283,7 @@
                 </iframe>
                 <br>
             </div>
-            <div>
+            <div class="grey">
                 <br>
                 <div class="Line"></div>
                 <h2>Contactez-moi</h2>
@@ -339,7 +339,7 @@
                 <p>Discord</p>
                 <br>
             </div>
-            <div>
+            <div class="grey">
                 <br>
                 <div class="Line"></div>
                 <p>Télécharger mon CV</p>
@@ -348,15 +348,22 @@
             </div>
         </aside>
         <footer>
-            <br>
-            <img class="img_footer" src="images/map_marker.png" alt="Image Marker Maps">
-            <p>Amiens, Hauts-de-France, France</p>
-            <img class="img_footer" src="images/logo_mail.png" alt="Image Mail">
-            <p>lucas.madranges[at]icloud.com</p>
-            <img class="img_footer" src="images/iphone.png" alt="Image téléphone">
-            <p>(+33)7.82.73.96.15</p>
-            <br>
-            <p>Copyright © 2023 Lucas Madranges</p>
+            <div>
+                <br>
+                <img class="img_footer" src="images/map_marker.png" alt="Image Marker Maps">
+                <p>Amiens, Hauts-de-France, France</p>
+                <img class="img_footer" src="images/logo_mail.png" alt="Image Mail">
+                <p>lucas.madranges[at]icloud.com</p>
+                <img class="img_footer" src="images/iphone.png" alt="Image téléphone">
+                <p>(+33)7.82.73.96.15</p>
+                <br>
+                <p>Copyright © 2023 Lucas Madranges</p>
+            </div>
+            <div>
+                <p>Mon Matériel de Stream</p>
+                <p>Dernière Mise à jour : 00.00.0000</p>
+                <p>Notes de mise à jour</p>
+            </div>
         </footer>
     </body>
 </html>
