Avancement du protfolio : Modification des compétences

--- a/index.html
+++ b/index.html
@@ -185,40 +185,40 @@
                 <div class="Line"></div>
                 <br>
                 <h3>Développement</h3>
-                <div>
-                    <p><img src="images/logo_html.png" alt="Logo du langage informatique HTML5"> HTML <progress value="3" max="5"></progress></p>
+                <div class="competences">
+                    <p class="txt_competences"><img class="competences_img" src="images/logo_html.png" alt="Logo du langage informatique HTML5"> HTML <progress value="3" max="5"></progress></p>
                 </div>
-                <div>
-                    <p><img src="images/logo_css.png" alt="Logo du langage informatique CSS3"> CSS <progress value="2" max="5"></progress></p>
+                <div class="competences">
+                    <p class="txt_competences"><img class="competences_img" src="images/logo_css.png" alt="Logo du langage informatique CSS3"> CSS <progress value="2" max="5"></progress></p>
                 </div>
-                <div>
-                    <p><img src="images/logo_js.png" alt="Logo du langage de programmation JavaScript"> JS <progress value="1" max="5"></progress></p>
+                <div class="competences">
+                    <p class="txt_competences"><img class="competences_img" src="images/logo_js.png" alt="Logo du langage de programmation JavaScript"> JS <progress value="1" max="5"></progress></p>
                 </div>
-                <div>
-                    <p><img src="images/logo_php.png" alt="Logo du langage de programmation PHP"> PHP <progress value="2" max="5"></progress></p>
+                <div class="competences">
+                    <p class="txt_competences"><img class="competences_img" src="images/logo_php.png" alt="Logo du langage de programmation PHP"> PHP <progress value="2" max="5"></progress></p>
                 </div>
-                <div>
-                    <p><img src="images/logo_git.png" alt="Logo de Git"> Git <progress value="2" max="5"></progress></p>
+                <div class="competences">
+                    <p class="txt_competences"><img class="competences_img" src="images/logo_git.png" alt="Logo de Git"> Git <progress value="2" max="5"></progress></p>
                 </div>
-                <div>
-                    <p><img src="images/logo_c++.png" alt="Logo du langage de programmation C++"> C++ <progress value="3" max="5"></progress></p>
+                <div class="competences">
+                    <p class="txt_competences"><img class="competences_img" src="images/logo_c++.png" alt="Logo du langage de programmation C++"> C++ <progress value="3" max="5"></progress></p>
                 </div>
                 <h3>Design</h3>
-                <div>
-                    <p><img src="images/figma_logo.png" alt="Logo de Figma"> Figma <progress value="3" max="5"></progress></p>
+                <div class="competences">
+                    <p class="txt_competences"><img class="competences_img" src="images/figma_logo.png" alt="Logo de Figma"> Figma <progress value="3" max="5"></progress></p>
                 </div>
-                <div>
-                    <p><img src="images/logo_adobe.png" alt="Logo de Adobe"> Adobe <progress value="1" max="5"></progress></p>
+                <div class="competences">
+                    <p class="txt_competences"><img class="competences_img" src="images/logo_adobe.png" alt="Logo de Adobe"> Adobe <progress value="1" max="5"></progress></p>
                 </div>
                 <h3>Outils</h3>
-                <div>
-                    <p><img src="images/visual-studio-code-1.svg" alt="Logo de Visual Sutdio Code"> VS Code <progress value="4" max="5"></progress></p>
+                <div class="competences">
+                    <p class="txt_competences"><img class="competences_img" src="images/visual-studio-code-1.svg" alt="Logo de Visual Sutdio Code"> VS Code <progress value="4" max="5"></progress></p>
                 </div>
-                <div>
-                    <p><img src="images/logo_github.png" alt="Logo de GitHub"> GitHub <progress value="3" max="5"></progress></p>
+                <div class="competences">
+                    <p class="txt_competences"><img class="competences_img" src="images/logo_github.png" alt="Logo de GitHub"> GitHub <progress value="3" max="5"></progress></p>
                 </div>
-                <div>
-                    <p><img src="images/logo_docker.png" alt="Logo de Docker"> Docker <progress value="2" max="5"></progress></p>
+                <div class="competences">
+                    <p class="txt_competences"><img class="competences_img" src="images/logo_docker.png" alt="Logo de Docker"> Docker <progress value="2" max="5"></progress></p>
                 </div>
                 <h3>Quelques autres langages que j'apprendrais :</h3>
                 <ul>
