Commit du nouveau site (temporaire)

--- a/index.html
+++ b/index.html
@@ -39,177 +39,68 @@
                     <p class="card--body__description">Application permettant d'ajouter des points sur une carte
                         JavaScript</p>
                     <div class="card--body__container">
-                        <button class="card--body__btn github">
+                        <a class="card--body__btn github"
+                           href="https://github.com/LucasMadranges/MaptyApp">
                             <ion-icon class="icon-github"
                                       name="logo-github"></ion-icon>
                             GitHub
-                        </button>
-                        <button class="card--body__btn">
+                        </a>
+                        <a class="card--body__btn"
+                           href="pages/MaptyApp/index.html">
                             Lien
                             <ion-icon class="link-outline"
                                       name="link-outline"></ion-icon>
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
             <div class="card">
                 <div class="card--entete">
                     <img class="img-fluid card--entete__img"
-                         src="img/illustrations/illustration_card/maptyapp.png">
+                         src="img/illustrations/illustration_card/bankistweb.png">
                 </div>
                 <div class="card--body">
-                    <h2 class="card--body__title">MaptyApp</h2>
+                    <h2 class="card--body__title">BankistWeb</h2>
                     <p class="card--body__description">Application permettant d'ajouter des points sur une carte
                         JavaScript</p>
                     <div class="card--body__container">
-                        <button class="card--body__btn github">
+                        <a class="card--body__btn github"
+                           href="https://github.com/LucasMadranges/BankistWeb">
                             <ion-icon class="icon-github"
                                       name="logo-github"></ion-icon>
                             GitHub
-                        </button>
-                        <button class="card--body__btn">
+                        </a>
+                        <a class="card--body__btn"
+                           href="pages/BankistWeb/index.html">
                             Lien
                             <ion-icon class="link-outline"
                                       name="link-outline"></ion-icon>
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
             <div class="card">
                 <div class="card--entete">
                     <img class="img-fluid card--entete__img"
-                         src="img/illustrations/illustration_card/maptyapp.png">
+                         src="img/illustrations/illustration_card/piggame.png">
                 </div>
                 <div class="card--body">
-                    <h2 class="card--body__title">MaptyApp</h2>
+                    <h2 class="card--body__title">PigGame</h2>
                     <p class="card--body__description">Application permettant d'ajouter des points sur une carte
                         JavaScript</p>
                     <div class="card--body__container">
-                        <button class="card--body__btn github">
+                        <a class="card--body__btn github"
+                           href="https://github.com/LucasMadranges/PigGame">
                             <ion-icon class="icon-github"
                                       name="logo-github"></ion-icon>
                             GitHub
-                        </button>
-                        <button class="card--body__btn">
+                        </a>
+                        <a class="card--body__btn"
+                           href="pages/PigGame/index.html">
                             Lien
                             <ion-icon class="link-outline"
                                       name="link-outline"></ion-icon>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card--entete">
-                    <img class="img-fluid card--entete__img"
-                         src="img/illustrations/illustration_card/maptyapp.png">
-                </div>
-                <div class="card--body">
-                    <h2 class="card--body__title">MaptyApp</h2>
-                    <p class="card--body__description">Application permettant d'ajouter des points sur une carte
-                        JavaScript</p>
-                    <div class="card--body__container">
-                        <button class="card--body__btn github">
-                            <ion-icon class="icon-github"
-                                      name="logo-github"></ion-icon>
-                            GitHub
-                        </button>
-                        <button class="card--body__btn">
-                            Lien
-                            <ion-icon class="link-outline"
-                                      name="link-outline"></ion-icon>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card--entete">
-                    <img class="img-fluid card--entete__img"
-                         src="img/illustrations/illustration_card/maptyapp.png">
-                </div>
-                <div class="card--body">
-                    <h2 class="card--body__title">MaptyApp</h2>
-                    <p class="card--body__description">Application permettant d'ajouter des points sur une carte
-                        JavaScript</p>
-                    <div class="card--body__container">
-                        <button class="card--body__btn github">
-                            <ion-icon class="icon-github"
-                                      name="logo-github"></ion-icon>
-                            GitHub
-                        </button>
-                        <button class="card--body__btn">
-                            Lien
-                            <ion-icon class="link-outline"
-                                      name="link-outline"></ion-icon>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card--entete">
-                    <img class="img-fluid card--entete__img"
-                         src="img/illustrations/illustration_card/maptyapp.png">
-                </div>
-                <div class="card--body">
-                    <h2 class="card--body__title">MaptyApp</h2>
-                    <p class="card--body__description">Application permettant d'ajouter des points sur une carte
-                        JavaScript</p>
-                    <div class="card--body__container">
-                        <button class="card--body__btn github">
-                            <ion-icon class="icon-github"
-                                      name="logo-github"></ion-icon>
-                            GitHub
-                        </button>
-                        <button class="card--body__btn">
-                            Lien
-                            <ion-icon class="link-outline"
-                                      name="link-outline"></ion-icon>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card--entete">
-                    <img class="img-fluid card--entete__img"
-                         src="img/illustrations/illustration_card/maptyapp.png">
-                </div>
-                <div class="card--body">
-                    <h2 class="card--body__title">MaptyApp</h2>
-                    <p class="card--body__description">Application permettant d'ajouter des points sur une carte
-                        JavaScript</p>
-                    <div class="card--body__container">
-                        <button class="card--body__btn github">
-                            <ion-icon class="icon-github"
-                                      name="logo-github"></ion-icon>
-                            GitHub
-                        </button>
-                        <button class="card--body__btn">
-                            Lien
-                            <ion-icon class="link-outline"
-                                      name="link-outline"></ion-icon>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card--entete">
-                    <img class="img-fluid card--entete__img"
-                         src="img/illustrations/illustration_card/maptyapp.png">
-                </div>
-                <div class="card--body">
-                    <h2 class="card--body__title">MaptyApp</h2>
-                    <p class="card--body__description">Application permettant d'ajouter des points sur une carte
-                        JavaScript</p>
-                    <div class="card--body__container">
-                        <button class="card--body__btn github">
-                            <ion-icon class="icon-github"
-                                      name="logo-github"></ion-icon>
-                            GitHub
-                        </button>
-                        <button class="card--body__btn">
-                            Lien
-                            <ion-icon class="link-outline"
-                                      name="link-outline"></ion-icon>
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
